update: poster and paper

--- a/poster/bibliography.bib
+++ b/poster/bibliography.bib
@@ -56,3 +56,14 @@
       primaryClass={quant-ph},
       url={https://arxiv.org/abs/2601.14433}, 
 }
+
+@article{raussendorf2001one,
+author = {Raussendorf, Robert and Briegel, Hans},
+year = {2001},
+month = {06},
+pages = {5188-91},
+title = {A One-Way Quantum Computer},
+volume = {86},
+journal = {Physical review letters},
+doi = {10.1103/PhysRevLett.86.5188}
+}
