--- a/report/bibliography.bib
+++ b/report/bibliography.bib
@@ -136,3 +136,13 @@ abstract = {Reverse-time stochastic diffusion equation models are defined and it
    year={2002},
    month=sep, pages={4273–4278} }
 
+@article{raussendorf2001one,
+author = {Raussendorf, Robert and Briegel, Hans},
+year = {2001},
+month = {06},
+pages = {5188-91},
+title = {A One-Way Quantum Computer},
+volume = {86},
+journal = {Physical review letters},
+doi = {10.1103/PhysRevLett.86.5188}
+}
